@@ -50,11 +50,15 @@
 
 	ASM_GLOBAL_DIRECTIVE C_SYMBOL_NAME(_mcount)
 	ASM_TYPE_DIRECTIVE(C_SYMBOL_NAME(_mcount), @function)
+	cfi_startproc
 	.align ALIGNARG(4)
 C_LABEL(_mcount)
 	/* Save the caller-clobbered registers.  */
 	ahi   %r15,-128
+	cfi_adjust_cfa_offset (128)
 	stm   %r14,%r5,96(%r15)
+	cfi_offset (r14, 0)
+	cfi_offset (r15, 4)
 	l     %r2,132(%r15)       # callers address  = first parameter
 	la    %r2,0(%r2)          # clear bit 0
 	la    %r3,0(%r14)         # callees address  = second parameter
@@ -77,7 +81,9 @@ C_LABEL(_mcount)
 	 */
 	lm    %r14,%r5,96(%r15)
 	ahi   %r15,128
+	cfi_adjust_cfa_offset (-128)
 	br    %r14
+	cfi_endproc
 	ASM_SIZE_DIRECTIVE(C_SYMBOL_NAME(_mcount))
 
 #undef mcount
